Alignment fix

--- a/src/app/templates/modules/vendor-and-customer/components/vendor-and-customer-list/vendor-and-customer-list.component.scss
+++ b/src/app/templates/modules/vendor-and-customer/components/vendor-and-customer-list/vendor-and-customer-list.component.scss
@@ -1,6 +1,6 @@
 
 @import "_common";
-
+/*
   @media screen and (min-device-width: 320px) and (max-device-width: 767px){
   .back-colr{float:left;}
   body{font-size: 12px;}
@@ -8,8 +8,7 @@
   table>thead>tr>th>div.custom-control{position: relative;
     top: 17px;}
   }
-  .over-flo{overflow-y: scroll !important; height: 50vh; display: table-caption;
-    position: absolute; top: 58px;}
+*/
 ::-webkit-scrollbar {
   width: 10px;
 }
